<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_bazaar_title">About Bazaar</string>
    <string name="about_bazaar_title_with_version">About Bazaar %s</string>
    <string name="account">Account</string>
    <string name="ad">ad</string>
    <string name="add_comment">Add review</string>
    <string name="add_shortcut">افزودن میان‌بر</string>
    <string name="add_shortcut_exp">شما می‌توانید با افزودن میان‌براین برنامه به صفحه‌ی خانه‌ی گوشی خود، آن را همواره در دسترس داشته باشید.</string>
    <string name="address">آدرس</string>
    <string name="agreement_place_holder">✓ %s</string>
    <string name="all_review">All reviews</string>
    <string name="already_bought">Already bought.</string>
    <string name="already_logged_in">Already logged in.</string>
    <string name="amount">Amount</string>
    <string name="annually">annually</string>
    <string name="app_and_game">App and Game</string>
    <string name="app_name">Bazaar</string>
    <string name="app_not_published">برنامه مورد نظر منتشر نشده است.</string>
    <string name="app_subscription">Subscription App</string>
    <string name="app_version" formatted="false">%s (%d)</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps">Apps</string>
    <string name="article">In Press</string>
    <string name="ask_to_login_message">Sign in to use all features of this app.</string>
    <string name="ask_to_login_message_">Sign in to use all features of %s</string>
    <string name="bandwidth_optimization_setting_desc">If deactivated, applications will be downloaded simultaneously which may slow down your internet.</string>
    <string name="bandwidth_optimization_setting_title">Optimized usage of bandwidth</string>
    <string name="bazaar_account">Bazaar Account</string>
    <string name="bazaar_kids_dialog_call_support">Please call support.</string>
    <string name="bazaar_kids_dialog_date_picker_title">Your birthdate (parental control)</string>
    <string name="bazaar_kids_dialog_description">Bazaar Kids is a suitable place for children under parental control.</string>
    <string name="bazaar_kids_dialog_invalid_date">Entered date is invalid.</string>
    <string name="bazaar_kids_dialog_title">Bazaar Kids</string>
    <string name="bazaar_kids_disabled">‌Bazaar Kids disabled.</string>
    <string name="bazaar_kids_enabled">‌Bazaar Kids enabled.</string>
    <string name="bazaar_shield_desc">Bazaar security alert with continuous and automatic activity Detects unsecured apps and protects your device.</string>
    <string name="billing_response_result_billing_unavailable">Billing is currently unavailable.</string>
    <string name="billing_response_result_developer_error">A developer error occurred.</string>
    <string name="billing_response_result_error">Unknown error occurred.</string>
    <string name="billing_response_result_item_already_owned">Item is already owned.</string>
    <string name="billing_response_result_item_not_owned">Item is not owned.</string>
    <string name="billing_response_result_item_unavailable">This item is currently unavailable</string>
    <string name="billing_response_result_ok">Payment done.</string>
    <string name="billing_response_result_user_cancelled">Payment cancelled by user.</string>
    <string name="bookmarked_items">Bookmarks</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bought_items">Bought Items</string>
    <string name="buy">Buy</string>
    <string name="cafe_bazaar_settings">CafeBazaar Settings</string>
    <string name="cafebazaar_credit">Cafe Bazaar Credit</string>
    <string name="cancel">Cancel</string>
    <string name="category">Categories</string>
    <string name="change">Change</string>
    <string name="changeLog">"What's new"</string>
    <string name="change_phone_description">"Warning: you're changing your phone number.
 by accepting this, you will move all of your purchases, subscriptions and your account information to another phone number.
 also then you'll not be able to login by this phone number and need to have access to your new phone number."</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_phone_number_dialog_description">Please enter your phone number</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose">انتخاب</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="choose_series_season">Choose Series Season</string>
    <string name="choosing_this_item_is_necessary">انتخاب این مورد الزامی است.</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="clear_search_history_failed">Remove search history failed!</string>
    <string name="com.crashlytics.android.build_id">1b96109b-2bef-4ed8-81af-1452be59b8f7</string>
    <string name="comments">نظرات</string>
    <string name="commit">OK</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="copyright_title">Copyright</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="dont_ask_me_again">"Don't ask me again!"</string>
    <string name="dont_want">"Don't want"</string>
    <string name="enable_location_in_setting">In order to access your approximate location (the city you live in) you have to activate it from Cafe Bazar app settings on your phone.</string>
    <string name="general">General</string>
    <string name="gift_card">Redeem Gift Card</string>
    <string name="gift_card_fragment_description">Enter code:</string>
    <string name="gift_code">Gift Code</string>
    <string name="location_permission_dialog_message">Due to enhanced customization and in order to present location-based suggestions, we need to have access to your approximate location (the city you live in); do you authorize the access?</string>
    <string name="location_permission_dialog_title">Location-based suggestions</string>
    <string name="location_permission_setting_message">Due to enhanced customization and in order to present location-based suggestions, we need to have access to your approximate location (the city you live in)</string>
    <string name="merge_account_success_description">From now on, you can enter Bazaar through this phone number. You don’t need email anymore.</string>
    <string name="merge_account_success_title">Your phone number added successfully.</string>
    <string name="more_info">Read more</string>
    <string name="no_malicious_app_found">No malicious app found.</string>
    <string name="other">Other</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_not_allow">Deny</string>
    <string name="privacy_title">Privacy</string>
    <string name="release_notes_title">Release Notes</string>
    <string name="schedule_update_clarification__" formatted="false">"Updates will be downloaded automatically from %s to %s daily. (At most %s long)
You can install them any time by then."</string>
    <string name="see_bazaar_in_system_settings">View Bazaar in system settings</string>
    <string name="setting_download_title">Download</string>
    <string name="settings_check_apps_update">Check for update</string>
    <string name="settings_faster_update_downloading_summary">When enabled, you can download updates of apps with 30% of their actual size on average.</string>
    <string name="settings_faster_update_downloading_title">Faster Downloading of updates</string>
    <string name="settings_keep_backups_of_apps_summary">Installation file of apps are stored in default download folder of the device.This may cause low storage issues on your device.</string>
    <string name="settings_keep_backups_of_apps_title">Keep backups of apps</string>
    <string name="settings_language">Language (زبان)</string>
    <string name="settings_update_notification_summary">Notify me when updates are available.</string>
    <string name="settings_update_notification_title">Updates Notification</string>
    <string name="settings_update_scheduling_summary">Automatic downloading of updates in specified hours.</string>
    <string name="settings_update_scheduling_title">Update Scheduling</string>
    <string name="submit">Submit</string>
    <string name="suggest_to_friends">Suggest to friends</string>
    <string name="terms_of_service_title">Terms of Service</string>
    <string name="token">Token</string>
    <string name="update">Update</string>
    <string name="wifi_and_network_key">wifi_and_network</string>
    <string name="your_phone_number">Your phone number</string>
</resources>