<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:padding="@dimen/default_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double_half" android:text="@string/bazaar_kids_dialog_title" android:layout_marginStart="@dimen/default_margin" android:layout_marginEnd="@dimen/default_margin" style="@style/Bazaar.Text.Body1" />
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="start" android:id="@id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:text="@string/bazaar_kids_dialog_description" android:layout_marginStart="@dimen/default_margin" android:layout_marginEnd="@dimen/default_margin" style="@style/Bazaar.Text.Body2" />
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="start" android:id="@id/datePickerTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:text="@string/bazaar_kids_dialog_date_picker_title" android:layout_marginStart="@dimen/default_margin" android:layout_marginEnd="@dimen/default_margin" style="@style/Bazaar.Text.Subtitle2" />
    <com.farsitel.bazaar.widget.persianpicker.PersianDatePicker android:id="@id/datePicker" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/default_margin" app:displayMonthNames="true" app:minYear="1295" />
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="start" android:id="@id/errorMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin" android:layout_marginStart="@dimen/default_margin" android:layout_marginEnd="@dimen/default_margin" style="@style/Bazaar.Text.Warning" />
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="start" android:id="@id/callToSupportMessage" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bazaar_kids_dialog_call_support" android:layout_marginStart="@dimen/default_margin" android:layout_marginEnd="@dimen/default_margin" style="@style/Bazaar.Text.Warning" />
    <com.farsitel.bazaar.core.widget.DialogButtonLayout android:id="@id/dialogButtonLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin" app:cancel="@string/cancel" app:commit="@string/submit" />
</LinearLayout>