<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:paddingLeft="@dimen/default_margin_double" android:paddingTop="@dimen/default_margin_double" android:paddingRight="@dimen/default_margin_double" android:paddingBottom="@dimen/default_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/change_phone_number_dialog_description" android:layout_alignParentTop="true" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0sp" android:textColor="@color/error_text" android:id="@id/errorTextView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin" android:layout_below="@id/description" />
    <androidx.appcompat.widget.AppCompatEditText android:id="@id/phoneNumberEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:hint="@string/your_phone_number" android:layout_below="@id/errorTextView" android:inputType="text" android:imeOptions="actionNext" android:textAlignment="viewStart" />
    <com.farsitel.bazaar.core.widget.DialogButtonLayout android:id="@id/dialogButtonLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin" android:layout_below="@id/phoneNumberEditText" app:cancel="@string/cancel" app:commit="@string/submit" />
</RelativeLayout>