<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:paddingTop="@dimen/default_margin_double" android:paddingBottom="@dimen/default_margin_half" android:layout_width="0.0dip" android:layout_height="wrap_content" android:paddingStart="@dimen/default_margin_double" android:paddingEnd="@dimen/default_margin_double"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/location_permission_dialog_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Bazaar.Text.Body1" />
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="start" android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:text="@string/location_permission_dialog_message" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/Bazaar.Text.Body2.Dark" />
    <com.google.android.material.button.MaterialButton android:gravity="center" android:id="@id/commitButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:text="@string/permission_allow" android:paddingStart="@dimen/default_margin_double" android:paddingEnd="@dimen/default_margin_double" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/description" style="@style/Bazaar.Button.Flat.FullSize.Dialog" />
    <androidx.appcompat.widget.AppCompatButton android:gravity="center" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/permission_not_allow" android:paddingStart="@dimen/default_margin_double" android:paddingEnd="@dimen/default_margin_double" android:layout_marginStart="@dimen/default_margin_double" android:layout_marginEnd="@dimen/default_margin_double" app:layout_constraintBottom_toBottomOf="@id/commitButton" app:layout_constraintEnd_toStartOf="@id/commitButton" app:layout_constraintTop_toTopOf="@id/commitButton" style="@style/Bazaar.Button.Flat.Secondary.SmallText.Dialog" />
    <View android:id="@id/divider" android:layout_width="0.0dip" android:layout_marginTop="@dimen/default_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/commitButton" style="@style/Bazaar.Divider" />
    <androidx.appcompat.widget.AppCompatCheckBox android:id="@id/dontShowAgainShowCheckBox" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin" android:layout_marginBottom="@dimen/default_margin" android:text="@string/dont_ask_me_again" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/divider" />
</androidx.constraintlayout.widget.ConstraintLayout>