<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center" app:srcCompat="@drawable/ic_shield" style="@style/Bazaar.Image.ShieldIcon" />
    <com.farsitel.bazaar.widget.LocalAwareTextView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_one_half" android:text="@string/no_malicious_app_found" android:textAlignment="center" android:layout_marginStart="@dimen/default_margin_quintuple" android:layout_marginEnd="@dimen/default_margin_quintuple" style="@style/Bazaar.Text.Subtitle2" />
    <com.farsitel.bazaar.widget.LocalAwareTextView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin" android:text="@string/bazaar_shield_desc" android:textAlignment="center" android:layout_marginStart="@dimen/default_margin_quintuple" android:layout_marginEnd="@dimen/default_margin_quintuple" style="@style/Bazaar.Text.Body2" />
    <com.google.android.material.button.MaterialButton android:layout_gravity="center" android:id="@id/emptyViewAction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:text="@string/more_info" style="@style/Bazaar.Button.Flat.Primary.SmallText" />
</LinearLayout>