<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:paddingTop="@dimen/default_margin_double" android:paddingBottom="@dimen/default_margin_half" android:layout_width="0.0dip" android:layout_height="wrap_content" android:paddingStart="@dimen/default_margin_double" android:paddingEnd="@dimen/default_margin_double"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Bazaar.Text.Body1" />
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="start" android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:text="@string/enable_location_in_setting" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/Bazaar.Text.Body2.Dark" />
    <com.google.android.material.button.MaterialButton android:gravity="center" android:id="@id/commitButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:layout_marginBottom="@dimen/default_margin_double" android:text="@string/cafe_bazaar_settings" android:paddingStart="@dimen/default_margin_double" android:paddingEnd="@dimen/default_margin_double" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/description" style="@style/Bazaar.Button.Flat.FullSize.Dialog" />
    <androidx.appcompat.widget.AppCompatButton android:gravity="center" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dont_want" android:paddingStart="@dimen/default_margin_double" android:paddingEnd="@dimen/default_margin_double" android:layout_marginStart="@dimen/default_margin_double" android:layout_marginEnd="@dimen/default_margin_double" app:layout_constraintBottom_toBottomOf="@id/commitButton" app:layout_constraintEnd_toStartOf="@id/commitButton" app:layout_constraintTop_toTopOf="@id/commitButton" style="@style/Bazaar.Button.Flat.Secondary.SmallText.Dialog" />
</androidx.constraintlayout.widget.ConstraintLayout>